--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -7,10 +7,14 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+
 <div class="scroll d-flex flex-direction-column">
-    <div class="background-text" style="background-color: red">
-        <h2 class="font-aliens letter-space-0_5">kulikowski</h2>
-        <h2 class="portfolio">portfolio</h2>
+    <div>
+        <div class="logo-background"></div>
+    </div>
+    <div class="background-text">
+        <h2 class="font-aliens letter-space-0_5 m-l-200">kulikowski</h2>
+        <h2 class="portfolio m-t-60 m-l-350">portfolio</h2>
     </div>
 </div>
 
