--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -5,22 +5,27 @@
     <title>Szymon Kulikowski</title>
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <script src="https://kit.fontawesome.com/96a3bf8f6c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-<div class="scroll d-flex flex-direction-column">
-    <div>
+<div class="d-flex flex-direction-column background-gradient h-100 justify-content-center">
+    <div class="d-flex justify-content-center">
         <div class="logo-background"></div>
     </div>
-    <div class="background-text">
-        <h2 class="font-aliens letter-space-0_5 m-l-200">kulikowski</h2>
-        <h2 class="portfolio m-t-60 m-l-350">portfolio</h2>
+    <div class="background-text justify-content-center">
+        <h2 style="display: none" class="font-aliens letter-space-0_5 m-l-200">kulikowski</h2>
+        <h2 class="portfolio">portfolio</h2>
+        <div class="font-size-_3 m-t-60 round-border centerize-arrow rotate-border">
+            <i class="fas fa-angle-double-down move-up-down rotate-rev"></i>
+        </div>
+
     </div>
 </div>
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/jquery.jInvertScroll.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<!--<script type="text/javascript" src="js/jquery.min.js"></script>-->
+<!--<script type="text/javascript" src="js/jquery.jInvertScroll.js"></script>-->
+<!--<script type="text/javascript" src="js/script.js"></script>-->
 
 </body>
 </html>
