add move arrow to roght bottom

--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-<div class="fixed-top-left d-flex social-media m-t-15">
-    <div class="m-r-15"><i class="fab fa-facebook"></i></div>
-    <div class="m-r-15"><i class="fab fa-linkedin"></i></div>
-    <div class="m-r-15"><i class="fab fa-instagram"></i></div>
+<div class="fixed-top-right d-flex social-media m-t-8">
+    <div class="m-r-8"><i class="fab fa-facebook"></i></div>
+    <div class="m-r-8"><i class="fab fa-linkedin"></i></div>
+    <div class="m-r-8"><i class="fab fa-instagram"></i></div>
 </div>
 
 <div id="first-section" class="d-flex flex-direction-column background-gradient-black h-100vh justify-content-end">
@@ -26,10 +26,10 @@
         </div>
     </div>
 
-    <div id="arrow-down" class="d-flex justify-content-center position-arrow m-b-30">
-        <a href="#second-section">
-            <div class="background-text round-border centerize-arrow rotate-border justify-content-center">
-                <i class="fas fa-angle-double-down move-up-down rotate-rev font-size-_3"></i>
+    <div id="arrow-down" class="d-flex justify-content-center position-arrow">
+        <a id="arrow-href" href="#second-section">
+            <div class="arrow-font round-border centerize-arrow rotate-border justify-content-center">
+                <i id="arrow" class="fas fa-angle-double-down move-up-down rotate-rev font-size-_3"></i>
             </div>
         </a>
     </div>
