--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -18,14 +18,15 @@
 </div>
 
 <div id="first-section" class="d-flex flex-direction-column background-gradient-black h-100vh justify-content-end">
-    <div id="logo" class="d-flex flex-direction-column align-items-center justify-content-center scalable-logo">
-        <div class="logo-background"></div>
-        <div class="background-text justify-content-center">
-            <h2 style="display: none" class="font-aliens letter-space-0_5 m-l-200">kulikowski</h2>
-            <h2 class="portfolio">portfolio</h2>
+    <a href="#first-section">
+        <div id="logo" class="d-flex flex-direction-column align-items-center justify-content-center scalable-logo">
+            <div class="logo-background"></div>
+            <div class="background-text justify-content-center">
+                <h2 style="display: none" class="font-aliens letter-space-0_5 m-l-200">kulikowski</h2>
+                <h2 class="portfolio">portfolio</h2>
+            </div>
         </div>
-    </div>
-
+    </a>
     <div id="arrow-down" class="d-flex justify-content-center position-arrow">
         <a id="arrow-href" href="#second-section">
             <div class="arrow-font round-border centerize-arrow rotate-border justify-content-center">
@@ -35,8 +36,13 @@
     </div>
 </div>
 
-<div id="second-section" class="h-100vh background-gradient-green">
-
+<div id="second-section" class="h-100vh background-gradient-green d-flex align-items-center">
+    <div class="websites-rotator d-flex m-t-80 justify-content-around w-100">
+        <div class="website-element element-1"></div>
+        <div class="website-element element-2"></div>
+        <div class="website-element element-3"></div>
+        <div class="website-element element-4"></div>
+    </div>
 </div>
 
 
