--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -43,6 +43,12 @@
         <div class="website-element element-3"></div>
         <div class="website-element element-4"></div>
     </div>
+<!--    <div class="d-flex websites-rotator-fixed  m-t-80 justify-content-around w-100">-->
+<!--        <div class="website-element element-1"></div>-->
+<!--        <div class="website-element element-2"></div>-->
+<!--        <div class="website-element element-3"></div>-->
+<!--        <div class="website-element element-4"></div>-->
+<!--    </div>-->
 </div>
 
 
