--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -38,30 +38,29 @@
 
 <div id="second-section" class="h-100vh background-gradient-green d-flex align-items-center">
     <div class="websites-rotator d-flex m-t-80 justify-content-around w-100">
-        <div class="website-element element-1 neumorphic-shadow"></div>
-        <div class="website-element element-2"></div>
-        <div class="website-element element-3"></div>
-        <div class="website-element element-4"></div>
+        <div class=""><img class="website-element element-1 neumorphic-shadow" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg"></div>
+        <div class=""><img class="website-element element-2 neumorphic-shadow" alt="Przykładowy layout" src="img/web/bustaxi-layout.png"></div>
+        <div class=""><img class="website-element element-3 neumorphic-shadow" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg"></div>
+        <div class=""><img class="website-element element-4 neumorphic-shadow" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
     </div>
-    <div class="d-flex websites-rotator-fixed justify-content-around align-items-center w-100 fit-whole-screen">
-        <div class="button-back">
-            <div class="position-arrow-back">
-                <a href="#second-section">
-                    <div class="arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
-                        <i class="fas fa-angle-double-left move-left-right rotate-rev font-size-_3"></i>
-                    </div>
-                </a>
-            </div>
+    <div id="one-site-display" class="display-none d-flex websites-rotator-fixed justify-content-around align-items-center w-100 fit-whole-screen">
+        <div class="position-arrow-back">
+            <button type="button" id="button-back" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
+                <i class="fas fa-angle-double-left move-left-right rotate-rev font-size-_3"></i>
+            </button>
         </div>
         <div class="websites-text">
             <p class="websites-text-size">
-                Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak Aldus PageMaker
+                Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym. Został po raz pierwszy użyty w XV w. przez nieznanego drukarza do wypełnienia tekstem
+                próbnej książki. Pięć wieków później zaczął być używany przemyśle elektronicznym, pozostając praktycznie niezmienionym. Spopularyzował się w latach 60. XX w. wraz z publikacją arkuszy
+                Letrasetu, zawierających fragmenty Lorem Ipsum, a ostatnio z zawierającym różne wersje Lorem Ipsum oprogramowaniem przeznaczonym do realizacji druków na komputerach osobistych, jak
+                Aldus PageMaker
             </p>
         </div>
-        <div class="website-element-one scale-website-element element-1-big"></div>
-        <div class="website-element-one scale-website-element element-2-big display-none"></div>
-        <div class="website-element-one scale-website-element element-3-big display-none"></div>
-        <div class="website-element-one scale-website-element element-4-big display-none"></div>
+        <div class="website-element-one element-1-big display-none"><img class="website-element-one element-1-big display-none" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg"></div>
+        <div class="website-element-one element-2-big display-none"><img class="website-element-one element-2-big display-none" alt="Przykładowy layout" src="img/web/bustaxi-layout.png"></div>
+        <div class="website-element-one element-3-big display-none"><img class="website-element-one element-3-big display-none" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg"></div>
+        <div class="website-element-one element-4-big display-none"><img class="website-element-one element-4-big display-none" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
     </div>
 </div>
 
