--- a/horizontal-idea/index.html
+++ b/horizontal-idea/index.html
@@ -5,9 +5,14 @@
     <title>Szymon Kulikowski</title>
     <link href="css/reset.css" rel="stylesheet" type="text/css"/>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
     <script src="https://kit.fontawesome.com/96a3bf8f6c.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+
 </head>
 <body>
 
@@ -27,25 +32,33 @@
             </div>
         </div>
     </a>
-    <div id="arrow-down" class="d-flex justify-content-center position-arrow">
-        <a id="arrow-href" href="#second-section">
+    <div id="arrow-up" class="d-flex justify-content-center position-arrow">
+        <a id="arrow-href-up" href="#second-section" onclick="prevSection()">
             <div class="arrow-font round-border centerize-arrow rotate-border justify-content-center">
                 <i id="arrow" class="fas fa-angle-double-down  rotate-rev font-size-_3"></i>
             </div>
         </a>
     </div>
+    <div id="arrow-down" class="d-flex justify-content-center position-arrow">
+        <a id="arrow-href-down" href="#second-section" onclick="nextSection()">
+            <div class="arrow-font round-border centerize-arrow rotate-border justify-content-center">
+                <i id="arrow-down-i" class="fas fa-angle-double-down  rotate-rev font-size-_3"></i>
+            </div>
+        </a>
+    </div>
 </div>
 
-<div id="second-section" class="h-100vh background-gradient-green d-flex align-items-center">
-    <div class="websites-rotator d-flex m-t-80 justify-content-around w-100">
-        <div class=""><img class="website-element element-1 neumorphic-shadow" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg"></div>
-        <div class=""><img class="website-element element-2 neumorphic-shadow" alt="Przykładowy layout" src="img/web/bustaxi-layout.png"></div>
-        <div class=""><img class="website-element element-3 neumorphic-shadow" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg"></div>
-        <div class=""><img class="website-element element-4 neumorphic-shadow" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
+<div id="second-section" class="h-100 d-flex justify-content-center background-gradient-green d-flex align-items-center">
+    <div class="autoplay websites-rotator d-flex w-80">
+        <div onclick="openFullscreen(1)"><img class="website-element" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg"></div>
+        <div onclick="openFullscreen(2)"><img class="website-element" alt="Przykładowy layout" src="img/web/bustaxi-layout.png"></div>
+        <div onclick="openFullscreen(3)"><img class="website-element" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg"></div>
+        <div onclick="openFullscreen(4)"><img class="website-element" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
+        <div onclick="openFullscreen(5)"><img class="website-element" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
     </div>
-    <div id="one-site-display" class="display-none d-flex websites-rotator-fixed justify-content-around align-items-center w-100 fit-whole-screen">
+    <div id="one-site-display" class="visibility-none d-flex websites-rotator-fixed justify-content-around align-items-center w-100 fit-whole-screen">
         <div class="position-arrow-back">
-            <button type="button" id="button-back" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
+            <button type="button" id="button-back" onclick="closeFullscreen()" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
                 <i class="fas fa-angle-double-left move-left-right rotate-rev font-size-_3"></i>
             </button>
         </div>
@@ -57,13 +70,107 @@
                 Aldus PageMaker
             </p>
         </div>
-        <div class="website-element-one element-1-big display-none"><img class="website-element-one element-1-big display-none" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg"></div>
-        <div class="website-element-one element-2-big display-none"><img class="website-element-one element-2-big display-none" alt="Przykładowy layout" src="img/web/bustaxi-layout.png"></div>
-        <div class="website-element-one element-3-big display-none"><img class="website-element-one element-3-big display-none" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg"></div>
-        <div class="website-element-one element-4-big display-none"><img class="website-element-one element-4-big display-none" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
+        <div class="website-element-one element-1-big visibility-none display-none"><img class="element-big element-1-big visibility-none" alt="Przykładowy layout" src="img/web/ekomar-layout.jpg">
+        </div>
+        <div class="website-element-one element-2-big visibility-none display-none"><img class="element-big element-2-big visibility-none" alt="Przykładowy layout" src="img/web/bustaxi-layout.png">
+        </div>
+        <div class="website-element-one element-3-big visibility-none display-none"><img class="element-big element-3-big visibility-none" alt="Przykładowy layout" src="img/web/rajdykonne-layout.jpg">
+        </div>
+        <div class="website-element-one element-4-big visibility-none display-none"><img class="element-big element-4-big visibility-none" alt="Przykładowy layout" src="img/web/tpr-layout.png"></div>
     </div>
 </div>
 
+<div id="third-section" class="h-100 d-flex justify-content-around background-gradient-blue d-flex align-items-center">
+    <div class="logo-list">
+        <div onclick="logoLightboxOpen(1)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/1.jpg" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(2)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/2.jpg" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(3)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/3.jpg" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(4)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/4.png" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(5)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/5.png" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(6)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/7.jpg" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(7)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/8.png" alt="Przykładowe logo"/></div>
+        <div onclick="logoLightboxOpen(8)" class="logo-thumbnail"><img class="logo-thumbnail-image" src="img/logos/9.png" alt="Przykładowe logo"/></div>
+    </div>
+    <div class="logo-thumbnail-lightbox visibility-none">
+        <div class="position-arrow-prev">
+            <button type="button" id="button-prev" onclick="logoLightboxPrev()" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
+                <i class="fas fa-angle-double-left move-left-right rotate-rev font-size-_3"></i>
+            </button>
+        </div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-1 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/1.jpg" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-2 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/2.jpg" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-3 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/3.jpg" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-4 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/4.png" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-5 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/5.png" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-6 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/7.jpg" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-7 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/8.png" alt="Przykładowe logo"/></div>
+        <div class="logo-thumbnail-big logo-thumbnail-big-8 visibility-none display-none"><img class="logo-thumbnail-image-big" src="img/logos/9.png" alt="Przykładowe logo"/></div>
+        <div class="position-arrow-next">
+            <button type="button" id="button-next" onclick="logoLightboxNext()" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
+                <i class="fas fa-angle-double-right move-right-left rotate-rev font-size-_3"></i>
+            </button>
+        </div>
+        <div class="position-arrow-close">
+            <button type="button" id="button-close" onclick="logoLightboxClose()" class="clear-button arrow-font round-border-back centerize-arrow rotate-border justify-content-center">
+                <i class="fas fa-times rotate-rev font-size-_3"></i>
+            </button>
+        </div>
+    </div>
+</div>
+<div id="fourth-section" class="d-flex justify-content-around background-gradient-red d-flex align-items-center">
+    <div class="other">
+        <div class="other-group other-1">
+            <div class="other-image">
+                <img src="img/ads/banner.jpg" alt="kredowy-baner"/>
+            </div>
+            <div class="other-text">
+                <p class="other-text-size">
+                    Baner dla szkoły w Strzyżowie
+                </p>
+            </div>
+        </div>
+        <div class="other-group other-2">
+            <div class="other-text">
+                <p class="other-text-size">
+                    Ulotka w stylu strony internetowej dla bustaxi-solina
+                </p>
+            </div>
+            <div class="other-image">
+                <img src="img/ads/1.jpg" alt="bustaxi-ulotka"/>
+            </div>
+        </div>
+        <div class="other-group other-3">
+            <div class="other-image">
+                <img src="img/cards/wizyrowki-stajniaTolhaji.jpg" alt="wizytowki-stajniatolhaji"/>
+            </div>
+            <div class="other-text">
+                <p class="other-text-size">
+                    Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
+                </p>
+            </div>
+        </div>
+        <div class="other-group other-4">
+            <div class="other-text">
+                <p class="other-text-size">
+                    Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
+                </p>
+            </div>
+            <div class="other-image">
+                <img src="img/others/piwa.jpg" alt="piwa"/>
+            </div>
+        </div>
+        <div class="other-group other-5">
+            <div class="other-image">
+                <img src="img/ads/banner.jpg" alt="kredowy-baner"/>
+            </div>
+            <div class="other-text">
+                <p class="other-text-size">
+                    Lorem Ipsum jest tekstem stosowanym jako przykładowy wypełniacz w przemyśle poligraficznym.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!--<script type="text/javascript" src="js/jquery.jInvertScroll.js"></script>-->
 
